Fixed Mobile Issue
Every was too big when
<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
was added

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body,html{
     position: relative;
 }
 .Background{
-    background-size: 8em;
+    background-size: 6em;
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: bottom;
